# vezbi

build-c_vezbi1_2-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-c_vezbi1_3-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-c_vezbi1_4-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-c_vezbi1_5-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-c_vezbi1_6-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
c_vezbi10/: CMakeLists.txt  main.c
c_vezbi10a/: CMakeLists.txt  main.c
c_vezbi11_1/: CMakeLists.txt  main.c
c_vezbi11_2/: CMakeLists.txt  main.c
c_vezbi11_3/: CMakeLists.txt  main.c
c_vezbi12_1/: CMakeLists.txt  main.c
c_vezbi12_2/: CMakeLists.txt  main.c
c_vezbi13_1/: CMakeLists.txt  main.c
c_vezbi13_2/: CMakeLists.txt  main.c
c_vezbi13_3/: CMakeLists.txt  main.c
c_vezbi1_2/: CMakeLists.txt  main.c
c_vezbi1_3/: CMakeLists.txt  main.c
c_vezbi1_4/: CMakeLists.txt  main.c
c_vezbi1_5/: CMakeLists.txt  main.c
c_vezbi1_6/: CMakeLists.txt  main.c
c_vezbi3_1/: CMakeLists.txt  main.c
c_vezbi3_2/: CMakeLists.txt  main.c
c_vezbi3_3/: CMakeLists.txt  main.c
c_vezbi3_4/: CMakeLists.txt  main.c
c_vezbi3_5/: CMakeLists.txt  main.c
c_vezbi3_6/: CMakeLists.txt  main.c
c_vezbi3_7/: CMakeLists.txt  main.c
c_vezbi3_8/: CMakeLists.txt  main.c
c_vezbi4_2/: CMakeLists.txt  main.c
c_vezbi4_3/: CMakeLists.txt  main.c
c_vezbi4_4/: CMakeLists.txt  main.c
c_vezbi4_5/: CMakeLists.txt  main.c
c_vezbi4_6/: CMakeLists.txt  main.c
c_vezbi4_7/: CMakeLists.txt  main.c
c_vezbi4_8/: CMakeLists.txt  main.c
c_vezbi4_9/: CMakeLists.txt  main.c
c_vezbi5_1/: CMakeLists.txt  main.c
c_vezbi5_2/: CMakeLists.txt  main.c
c_vezbi5_3/: CMakeLists.txt  main.c
c_vezbi5_4/: CMakeLists.txt  main.c
c_vezbi5_5/: CMakeLists.txt  main.c
c_vezbi6_1/: CMakeLists.txt  main.c
c_vezbi6_2/: CMakeLists.txt  main.c
c_vezbi7_1/: CMakeLists.txt  main.c
c_vezbi7_2/: CMakeLists.txt  main.c
c_vezbi7_3/: CMakeLists.txt  main.c
c_vezbi7_4/: CMakeLists.txt  main.c
c_vezbi7_5/: CMakeLists.txt  main.c
c_vezbi7_6/: CMakeLists.txt  main.c
c_vezbi7_7/: CMakeLists.txt  main.c
c_vezbi8_1/: CMakeLists.txt  main.c
c_vezbi8_2/: CMakeLists.txt  main.c
c_vezbi8_3/: CMakeLists.txt  main.c
c_vezbi8_4/: CMakeLists.txt  main.c
c_vezbi8_5/: CMakeLists.txt  main.c
c_vezbi9_1/: CMakeLists.txt  main.c
c_vezbi9_10/: CMakeLists.txt  main.c
c_vezbi9_12/: CMakeLists.txt  main.c
c_vezbi9_13/: CMakeLists.txt  main.c
c_vezbi9_14/: CMakeLists.txt  main.c
c_vezbi9_2/: CMakeLists.txt  main.c
c_vezbi9_3/: CMakeLists.txt  main.c
c_vezbi9_4/: CMakeLists.txt  main.c
c_vezbi9_5/: CMakeLists.txt  main.c
c_vezbi9_6/: CMakeLists.txt  main.c
c_vezbi9_7/: CMakeLists.txt  main.c
c_vezbi9_8/: CMakeLists.txt  main.c
c_vezbi9_9/: CMakeLists.txt  main.c
cpp_vezbi1_1/: CMakeLists.txt  main.cpp
cpp_vezbi1_2/: CMakeLists.txt  main.cpp
cppvezbi10_1/: CMakeLists.txt  main.cpp
cppvezbi11_1/: CMakeLists.txt  main.cpp
cppvezbi13_1/: CMakeLists.txt  main.cpp
cppvezbi2_1/: CMakeLists.txt  main.cpp
cppvezbi3_1/: CMakeLists.txt  main.cpp
cppvezbi3_2/: CMakeLists.txt  main.cpp
cppvezbi4_1/: CMakeLists.txt  (+1 more)
cppvezbi6_1/: CMakeLists.txt  main.cpp
stlvezbi1_5/: CMakeLists.txt  main.cpp
stlvezbi2_1/: CMakeLists.txt  main.cpp
stlvezbi2_3/: CMakeLists.txt  main.cpp
stlvezbi4_2/: CMakeLists.txt  main.cpp
stlvezbi4_3/: CMakeLists.txt  main.cpp
stlvezbi5_2/: CMakeLists.txt  main.cpp
stlvezbi6_2/: CMakeLists.txt  main.cpp
(+41 files in other folders)
