cmake_minimum_required(VERSION 3.5)

project(stivezbi1_5 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(stivezbi1_5 main.cpp)

include(GNUInstallDirs)
install(TARGETS stivezbi1_5
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
